<resources>
    <string name="app_name">RSS Noticias</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="compartir">compartir</string>
    <string name="acerca_de">Acerca De</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="autor_nombre">José Luis González Sánchez</string>
    <string name="virgen">CIFP Virgen de Gracia</string>
    <string name="titular_noticia">Titular de la Noticia de RSS</string>
    <string name="fecha_noticia">00/00/2020</string>
    <string name="hora_noticia_rss">00:00:00</string>
</resources>