<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.joseluisgs.rssnoticias.MainActivity">
    <item
            android:id="@+id/menu_atras"
            android:icon="@drawable/abc_vector_test"
            android:title=""
            app:showAsAction="always"/>
    <item
            android:id="@+id/menu_compartir_noticia"
            android:icon="@android:drawable/ic_menu_share"
            android:orderInCategory="100"
            android:title="@string/compartir"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/menu_mas"
            android:icon="@drawable/ic_more_vert"
            android:title="Más"
            app:showAsAction="always">
        <menu>
            <item
                    android:id="@+id/menu_acerca_de"
                    android:icon="@android:drawable/ic_menu_info_details"
                    android:title="@string/acerca_de"/>

            <item
                    android:id="@+id/menu_settings"
                    android:title="@string/action_settings"
                    android:icon="@android:drawable/ic_menu_preferences"/>
        </menu>
    </item>
</menu>