<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ui.acerca_de.AcercaDeFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorFondo"
    >

        <TextView
                android:text="@string/acerca_de"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/acercaTextTiittle"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="48dp" android:textColor="@color/colorPrimary" android:textSize="30sp"
                android:textStyle="bold"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" tools:src="@tools:sample/avatars"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/acercaDeViewAvatar" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/acercaTextTiittle"
                app:layout_constraintHorizontal_bias="0.5"/>
        <TextView
                android:text="@string/autor_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:id="@+id/acercaDeTextNombre"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp" android:textStyle="bold" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/acercaDeViewAvatar"/>
        <ImageView
                android:layout_width="85dp"
                android:layout_height="71dp" tools:src="@drawable/ic_github_icon" android:id="@+id/acercaDeViewGitHub"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/acercaDeTextNombre"
                app:layout_constraintEnd_toStartOf="@+id/acercaDeViewTwitter" android:layout_marginEnd="41dp"/>
        <ImageView
                android:layout_width="85dp"
                android:layout_height="71dp" tools:src="@drawable/ic_twitter_icon" android:id="@+id/acercaDeViewTwitter"
                tools:layout_editor_absoluteX="229dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/acercaDeTextNombre"
        />
        <TextView
                android:text="@string/virgen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:id="@+id/acercaDeTextVirgen"
                app:layout_constraintTop_toBottomOf="@+id/acercaDeViewGitHub" android:layout_marginTop="36dp"
                app:layout_constraintHorizontal_bias="0.5" android:textColor="@color/colorPrimary"
                android:textSize="18sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>